# homework_basecamp

./: .gitignore  .gitmodules  .main.cpp.swn  .main.cpp.swo  .main.cpp.swp  README.md
homework_2/task1/: .CMakeLists.txt.swo  .CMakeLists.txt.swp  CMakeLists.txt
homework_2/task1/include/: Person.h
homework_2/task1/src/: Person.cpp  main.cpp
homework_2/task2/: CMakeLists.txt
homework_2/task2/src/: Move.cpp  Move.h  main.cpp
homework_2/task3/: CMakeLists.txt  gold.cpp
homework_3/: CMakeLists.txt
homework_3/src/: date.cpp  date.h  main.cpp
homework_4/: CMakeLists.txt
homework_4/include/: string_m.h
homework_4/src/: main.cpp  string_m.cpp
homework_5/: CMakeLists.txt
homework_5/include/: port.h  vintage_port.h
homework_5/src/: main.cpp  port.cpp  vintage_port.cpp
homework_6/: CMakeLists.txt
homework_6/include/: wine.h
homework_6/src/: wine.cpp  wine_example.cpp
homework_7/: CMakeLists.txt
homework_7/include/: employee.h
homework_7/src/: employee.cpp  employee_test.cpp
